--- a/index.html
+++ b/index.html
@@ -40,50 +40,54 @@
 <body class="index">
 
   <header style="background-color: #f8f7fd; box-shadow: 0 1px 2px 0 #e1e5ea;">
-  <!-- NAVBAR -->
-  <nav class="navbar bg-primary pt-1">
-    <div class="container">
-      <a class="navbar-brand"><span class="nav me-auto pt-1" style="color: #fff; font-size: 9pt">Yogyakarta, Indonesia. 22–23 November 2022</span></a>
-      <ul class="nav">
-        <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://twitter.com/icosiaugm" target="_blank"><i class="fab fa-twitter fa-lg"></i></a></li>
-        <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://instagram.com/icosiaugm" target="_blank"><i class="fab fa-instagram fa-lg"></i></a></li>
-        <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://www.youtube.com/@icosiaugm5757" target="_blank"><i
-              class="fab fa-youtube fa-lg"></i></a></li>
-        <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="mailto:icosia@ugm.ac.id" target="_blank"><i class="fas fa-envelope fa-lg"></i></a></li>
-      </ul>
-    </div>
-  </nav>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
-      <a class="navbar-brand"><img src="images/logos/logo.svg" width="100px"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbar2Label">ICoSIA 2022</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item"><a class="nav-link" href="article/about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="article/satellite-events.html">Satellite events</a></li>
-            <li class="nav-item"><a class="nav-link" href="article/speakers.html">Speakers</a></li>
-            <li class="nav-item"><a class="nav-link" href="article/author-guidelines.html">Author</a></li>
-            <li class="nav-item"><a class="nav-link" href="article/fees.html">Fee</a></li>
-            <li class="nav-item"><a class="nav-link" href="article/programs.html">Program</a></li>
-            <li class="nav-item"><a class="nav-link" href="article/venue.html">Venue</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://icosiaugm.tawk.help/">Help</a></li>
-          </ul>
-        </div>
+    <!-- NAVBAR -->
+    <nav class="navbar bg-primary pt-1">
+      <div class="container">
+        <a class="navbar-brand"><span class="nav me-auto pt-1" style="color: #fff; font-size: 9pt">Yogyakarta,
+            Indonesia. 22–23 November 2022</span></a>
+        <ul class="nav">
+          <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
+              href="https://twitter.com/icosiaugm" target="_blank"><i class="fab fa-twitter fa-lg"></i></a></li>
+          <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
+              href="https://instagram.com/icosiaugm" target="_blank"><i class="fab fa-instagram fa-lg"></i></a></li>
+          <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
+              href="https://www.youtube.com/@icosiaugm5757" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
+          </li>
+          <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
+              href="mailto:icosia@ugm.ac.id" target="_blank"><i class="fas fa-envelope fa-lg"></i></a></li>
+        </ul>
       </div>
-      <button class="btn btn-success nav-register" disabled>Register</button>
-    </div>
-  </nav>
+    </nav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand"><img src="images/logos/logo.svg" width="100px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2"
+          aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2"
+          aria-labelledby="offcanvasNavbar2Label">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbar2Label">ICoSIA 2022</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+              aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item"><a class="nav-link" href="article/about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="article/satellite-events.html">Satellite events</a></li>
+              <li class="nav-item"><a class="nav-link" href="article/speakers.html">Speakers</a></li>
+              <li class="nav-item"><a class="nav-link" href="article/author-guidelines.html">Author</a></li>
+              <li class="nav-item"><a class="nav-link" href="article/fee.html">Fee</a></li>
+              <li class="nav-item"><a class="nav-link" href="article/program.html">Program</a></li>
+              <li class="nav-item"><a class="nav-link" href="article/venue.html">Venue</a></li>
+              <li class="nav-item"><a class="nav-link" href="https://icosiaugm.tawk.help/">Help</a></li>
+            </ul>
+          </div>
+        </div>
+        <button class="btn btn-primary nav-register" disabled>Register</button>
+      </div>
+    </nav>
   </header>
 
   <!-- CONTENTS -->
@@ -95,8 +99,11 @@
   <section class="jumbotron"
     style="height:100vh; margin-top:-5rem; background: url('images/jumbotron/jumbotron.jpg') center fixed no-repeat; background-size: cover;">
     <div class="container">
-      <h1 class="px-3" style="padding-top:25vh; text-align: left; font-size: 50px;">The 3<sup style="text-transform: lowercase;">rd</sup> International Conference on<br><span style="color: #40bb6a">Smart and Innovative Agriculture</span></h1>
-      <h5 class="px-3" style="text-align: left;">“Digital transformation, technology, and its solution for agriculture”</h5>
+      <h1 class="px-3" style="padding-top:25vh; text-align: left; font-size: 50px;">The 3<sup
+          style="text-transform: lowercase;">rd</sup> International Conference on<br><span style="color: #40bb6a">Smart
+          and Innovative Agriculture</span></h1>
+      <h5 class="px-3" style="text-align: left;">“Digital transformation, technology, and its solution for agriculture”
+      </h5>
       <p class="px-3" style="text-align: left">Yogyakarta, Indonesia. 22–23 November 2022</p>
     </div>
   </section>
@@ -104,16 +111,24 @@
     <div class="row px-4">
       <div class="col-md-8 col-sm-6">
         <div class="py-3">
-          <p>Held as part of the Universitas Gadjah Mada Annual Scientific Conferences (UASC 2022) series, the 3rd International Conference on Smart and Innovative Agriculture (ICoSIA 2022) provides an ideal academic platform for researchers to present the latest research findings and describe emerging technologies and directions in agriculture.</p>
-          <p>This year, the conference will take the theme “Digital transformation, technology, and its solution for agriculture” with <a href="article/symposia.html">seven symposia</a>: 
-            <a href="article/agricultural-big-data-analysis.html">Agricultural Big Data Analysis symposium</a>; 
-            <a href="article/agricultural-geography.html">Agricultural Geography symposium</a>; 
-            <a href="article/land-and-environmental-management.html">Land and Environmental Management symposium</a>; 
-            <a href="article/precision-nutrition-technology.html">Precision Nutrition Technology symposium</a>; 
-            <a href="article/smart-and-precision-farming.html">Smart and Precision Farming symposium</a>; 
-            <a href="article/smart-genetics-resource-management-and-utilization.html">Smart Genetics Resource Management and Utilization symposium</a>; and 
-            <a href="article/sustainable-food-production.html">Sustainable Food Production symposium</a>.</p>
-          <p>The accepted and presented papers <b>will be submitted for possible inclusion to</b> proceedings that are indexed by Scopus/CPCI/DOAJ: <a href="https://www.atlantis-press.com/proceedings/series/absr" target="_blank">Atlantis Press</a>.
+          <p>Held as part of the Universitas Gadjah Mada Annual Scientific Conferences (UASC 2022) series, the 3rd
+            International Conference on Smart and Innovative Agriculture (ICoSIA 2022) provides an ideal academic
+            platform for researchers to present the latest research findings and describe emerging technologies and
+            directions in agriculture.</p>
+          <p>This year, the conference will take the theme “Digital transformation, technology, and its solution for
+            agriculture” with <a href="article/satellite-events.html">seven symposia</a>:
+            <a href="article/agricultural-big-data-analysis.html">Agricultural Big Data Analysis symposium</a>;
+            <a href="article/agricultural-geography.html">Agricultural Geography symposium</a>;
+            <a href="article/land-and-environmental-management.html">Land and Environmental Management symposium</a>;
+            <a href="article/precision-nutrition-technology.html">Precision Nutrition Technology symposium</a>;
+            <a href="article/smart-and-precision-farming.html">Smart and Precision Farming symposium</a>;
+            <a href="article/smart-genetics-resource-management-and-utilization.html">Smart Genetics Resource Management
+              and Utilization symposium</a>; and
+            <a href="article/sustainable-food-production.html">Sustainable Food Production symposium</a>.
+          </p>
+          <p>The accepted and presented papers <b>will be submitted for possible inclusion to</b> proceedings that are
+            indexed by Scopus/CPCI/DOAJ: <a href="https://www.atlantis-press.com/proceedings/series/absr"
+              target="_blank">Atlantis Press</a>.
           </p>
         </div>
       </div>
@@ -146,26 +161,26 @@
           <div class="col-md-3">
             <h3 class="pb-3">Speakers</h3>
             <p>The conference invited speakers to enliven plenary and parallel sessions from various countries.</p>
-            <a href="article/speakers.html"><button type="button" class="btn btn-success">Show all speakers</button></a>
-            <br class="d-sm-block d-lg-none">
-            <br class="d-sm-block d-lg-none">
+            <a href="article/speakers.html"><button type="button" class="btn btn-primary">Show all speakers</button></a>
+            <br class="d-none d-md-none">
+            <br class="d-none d-md-none">
           </div>
           <div class="col-md-3 mb-3 text-center">
-            <img src="images/speakers/2022_josaphat.jpg" class="speaker-img" alt="Tomohiro Yokozeki">
+            <img src="images/speakers/2022_josaphat.jpg" class="speaker-img" alt="Josaphat T. S. Sumantyo">
             <div class="speaker-info">
               <p class="speaker-name">Prof. Josaphat T. S. Sumantyo</p>
               <p class="speaker-aff">Chiba University, Japan</p>
             </div>
           </div>
           <div class="col-md-3 mb-3 text-center">
-            <img src="images/speakers/2022_djagal.jpg" class="speaker-img" alt="Gil Nonato C. Santos">
+            <img src="images/speakers/2022_djagal.jpg" class="speaker-img" alt="Djagal W. Marseno">
             <div class="speaker-info">
               <p class="speaker-name">Prof. Djagal W. Marseno</p>
               <p class="speaker-aff">Universitas Gadjah Mada, Indonesia</p>
             </div>
           </div>
           <div class="col-md-3 mb-3 text-center">
-            <img src="images/speakers/2022_saeys.jpg" class="speaker-img" alt="Shou-Yan Chou">
+            <img src="images/speakers/2022_saeys.jpg" class="speaker-img" alt="Wouter Saeys">
             <div class="speaker-info">
               <p class="speaker-name">Prof. Wouter Saeys</p>
               <p class="speaker-aff">KU Leuven, Belgium</p>
@@ -177,13 +192,14 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="footer px-5 pb-2" style="background-color: #f4fcf7; box-shadow: 0 1px 2px 0 #e1e5ea;">
+  <footer class="footer pb-2" style="background-color: #f4fcf7; box-shadow: 0 1px 2px 0 #e1e5ea;">
     <div class="container">
       <!-- Sponsors -->
       <div class="text-center pt-3">
         <img src="images/logos/ugm.svg" class="px-3 my-2" style="filter: grayscale();" height="45px">
         <img src="images/publication/atlantis-press.svg" class="px-3 my-2" style="filter: grayscale();" height="35px">
-        <img src="images/publication/clarivate-analytics.svg" class="px-3 my-2" style="filter: grayscale();" height="40px">
+        <img src="images/publication/clarivate-analytics.svg" class="px-3 my-2" style="filter: grayscale();"
+          height="40px">
       </div>
       <hr class="mx-auto my-3" style="border-color: #ccc;">
 
@@ -196,8 +212,8 @@
             <a href="../icosia-2022/index.html#important-dates">Important dates</a><br>
             <a href="article/speakers.html">Speakers</a><br>
             <a href="article/about.html#advisor">Committees</a><br>
-            <a href="article/fees.html">Fee</a><br>
-            <a href="article/programs.html">Program</a><br>
+            <a href="article/fee.html">Fee</a><br>
+            <a href="article/program.html">Program</a><br>
             <a href="https://icosiaugm.tawk.help/">Help</a>
           </p>
         </div>
@@ -218,28 +234,31 @@
           <p>
             <a href="article/author-guidelines.html">Author guidelines</a><br>
             <a href="article/editorial-policy.html">Editorial policy</a><br>
-            <a href="article/submissions.html">Submission</a><br>
+            <a href="article/submission.html">Submission</a><br>
           </p>
           <h6 style="color: #1f73cc">Explore</h6>
           <p>
             <a href="article/venue.html">Conference venue</a><br>
             <a href="https://ugm.ac.id/en" target="_blank">Universitas Gadjah Mada</a><br>
-            <a href="https://visitingjogja.jogjaprov.go.id/" target="_blank">The city of Yogyakarta</a>
+            <a href="https://visitingjogja.jogjaprov.go.id/" target="_blank">City of Yogyakarta</a>
           </p>
         </div>
         <div class="col-md-3">
           <h6 style="color: #1f73cc">Connect</h6>
           <p>
-            <i class="fa fa-envelope"></i> <a href="mailto:icosia@ugm.ac.id" target="_blank"">icosia@ugm.ac.id</a><br>
-          <i class=" fa fa-twitter"></i> <a href="https://www.twitter.com/icosiaugm" target="_blank">@icosiaugm</a><br>
-              <i class="fa fa-instagram"></i> <a href="https://www.instagram.com/icosiaugm"
-                target="_blank">icosiaugm</a><br>
-              <i class="fa fa-twitter"></i> <a href="https://www.twitter.com/bpp_ugm" target="_blank">@BPP_UGM</a><br>
-              <i class="fa fa-instagram"></i> <a href="https://www.instagram.com/ugmyogyakarta"
-                target="_blank">@UGMYogyakarta</a>
+            <i class="fa-solid fa-envelope"></i> <a href="mailto:icosia@ugm.ac.id"
+              target="_blank">icosia@ugm.ac.id</a><br>
+            <i class="fa-brands fa-square-twitter"></i> <a href="https://www.twitter.com/icosiaugm"
+              target="_blank">icosiaugm</a><br>
+            <i class="fa-brands fa-square-instagram"></i> <a href="https://www.instagram.com/icosiaugm"
+              target="_blank">icosiaugm</a><br>
+            <i class="fa-brands fa-square-twitter"></i> <a href="https://www.twitter.com/bpp_ugm"
+              target="_blank">BPP_UGM</a><br>
+            <i class="fa-brands fa-square-instagram"></i> <a href="https://www.instagram.com/publikasiugm"
+              target="_blank">publikasiugm</a>
           </p>
           <p>
-            <a href="https://icosiaugm.tawk.help/" target="_blank"><button type="button" class="btn btn-success"><i
+            <a href="https://icosiaugm.tawk.help/" target="_blank"><button type="button" class="btn btn-primary"><i
                   class="fa-solid fa-headset"></i>&nbsp;&nbsp;ICoSIA UGM Helpdesk</button></a>
           </p>
         </div>
@@ -248,15 +267,18 @@
       <hr class="mx-auto my-3" style="border-color: #ccc;">
 
       <!-- Credits -->
-      <p class="text-muted text-justify">The International Conference on Smart and Innovative Technology 2022, 
+      <p class="credit text-muted text-justify">The International Conference on Smart and Innovative Technology 2022,
         organized by <a target="_blank" href="https://publikasi.ugm.ac.id/en/">BPP UGM</a>.
-        Website has been redeveloped by <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a> using 
-        <a target="_blank" href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha3</a>, 
-        and licenced as <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>, 
+        Website has been redeveloped by <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a> using
+        <a target="_blank" href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha3</a>,
+        and licenced as <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA
+          4.0</a>,
         <a target="_blank" href="https://github.com/bppugm/icosia-2022">unless otherwise stated</a>.
-        UGM and ICoSIA logos © Universitas Gadjah Mada. 
-        Icons by <a target="_blank" href="https://fontawesome.com/docs/changelog/">Font Awesome 6.4.0</a> 
-        (Fonticons Inc. <a target="_blank" href="https://fontawesome.com/license"><i class="fab fa-creative-commons-pd-alt"></i></a>).
+        UGM and ICoSIA logos © Universitas Gadjah Mada. Atlantis Press logo © Atlantis Press. Clarivate Analytics logo ©
+        Clarivate Analytics. 
+        Icons by <a target="_blank" href="https://fontawesome.com/docs/changelog/">Font Awesome 6.4.0</a>
+        (Fonticons Inc. <a target="_blank" href="https://fontawesome.com/license"><i
+            class="fab fa-creative-commons-pd-alt"></i></a>).
         Website © 2023 <a target="_blank" href="https://publikasi.ugm.ac.id/en/">Badan Penerbit dan Publikasi UGM</a>.
       </p>
     </div>
